# NVIDIA_Noise_Suppression_VST

./: .clang-format  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md
resource/: Info.plist  NvNseditor.uidesc  win32resource.aps
source/: NvNscids.h  NvNscontroller.cpp  NvNscontroller.h  NvNsentry.cpp  NvNsprocessor.cpp  NvNsprocessor.h  version.h
